1. 解决多重嵌套的滑动事件冲突 2. CirclePageIndicator 的使用

--- a/app/src/main/res/layout/newsmenupage.xml
+++ b/app/src/main/res/layout/newsmenupage.xml
@@ -7,10 +7,10 @@
         android:id="@+id/indicator_newsmenupage_title"
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"/>
-    <android.support.v4.view.ViewPager
+    <com.example.jession_ding.newsapplication.view.NewsMenuPageViewPage
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/vp_newsmenupage_content">
-    </android.support.v4.view.ViewPager>
+    </com.example.jession_ding.newsapplication.view.NewsMenuPageViewPage>
 
 </LinearLayout>
