--- a/app/src/main/res/layout/newsdetailpage.xml
+++ b/app/src/main/res/layout/newsdetailpage.xml
@@ -39,8 +39,8 @@
         </RelativeLayout>
     </RelativeLayout>-->
 
-    <ListView
+    <com.example.jession_ding.newsapplication.view.RefreshListView
         android:id="@+id/lv_newsdetailpage_newslist"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
+        android:layout_height="match_parent"></com.example.jession_ding.newsapplication.view.RefreshListView>
 </LinearLayout>
