1. 新闻内容设置     1.1 字体大小设置     1.2 字体属性保存 2. 第三方社会化分享(使用 mob) 3. 组图的不同格式切换

--- a/app/src/main/res/layout/activity_show_news.xml
+++ b/app/src/main/res/layout/activity_show_news.xml
@@ -48,8 +48,20 @@
             android:background="@drawable/icon_share"/>
     </RelativeLayout>
 
-    <WebView
-        android:id="@+id/wv_shownewsactivity_content"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></WebView>
+        android:layout_height="match_parent">
+
+        <WebView
+            android:id="@+id/wv_shownewsactivity_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></WebView>
+
+        <ProgressBar
+            android:id="@+id/pb_shownewsactivity_loading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            />
+    </RelativeLayout>
 </LinearLayout>
