--- a/app/src/main/res/layout/item_listview_picturenews.xml
+++ b/app/src/main/res/layout/item_listview_picturenews.xml
@@ -8,6 +8,7 @@
     <ImageView
         android:id="@+id/iv_listviewpicturenews_img"
         android:layout_width="140dp"
+        android:src="@drawable/news_pic_default"
         android:layout_height="120dp"/>
 
     <TextView
