--- a/app/src/main/res/layout/activity_guide.xml
+++ b/app/src/main/res/layout/activity_guide.xml
@@ -24,8 +24,8 @@
             android:id="@+id/ll_guideactivity_indicator">
         </LinearLayout>
         <View
-            android:layout_width="40px"
-            android:layout_height="40px"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:id="@+id/rp_guideactivity"
             android:background="@drawable/redpoint"/>
     </FrameLayout>
